index.html auto rotate

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
-    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
+    <meta http-equiv="ScreenOrientation" content="autoRotate:enable" />
     <meta name="theme-color" content="#000000" />
     <meta name="Sağlık Takip Sistemi" content="Sağlık Takip Sistemi" />
     <link rel="apple-touch-icon" href="/electrocardiogram.svg" />
