--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/electrocardiogram.svg" />
+    <link rel="icon" href="/logo4.jpeg" />
     <link rel="manifest" href="/manifest.json" />
     <script>
       if ("serviceWorker" in navigator) {
@@ -14,9 +14,18 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
     <meta http-equiv="ScreenOrientation" content="autoRotate:enable" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1976d2" />
     <meta name="Sağlık Takip Sistemi" content="Sağlık Takip Sistemi" />
-    <link rel="apple-touch-icon" href="/electrocardiogram.svg" />
+    <link rel="apple-touch-icon" href="/logo4.jpeg" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta name="apple-mobile-web-app-title" content="Sağlık Takip Sistemi" />
+    <link rel="apple-touch-icon" href="/logo4.jpeg" />
+    <link rel="apple-touch-startup-image" href="/logo4.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
