--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/logo4.jpeg" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/public/manifest.json" />
     <script>
       if ("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("/sw.js");
+        navigator.serviceWorker.register("/public/sw.js");
       }
     </script>
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
     <meta http-equiv="ScreenOrientation" content="autoRotate:enable" />
     <meta name="theme-color" content="#1976d2" />
-    <meta name="Sağlık Takip Sistemi" content="Sağlık Takip Sistemi" />
+    <meta
+      name="Sağlık ve Rutin Takip Sistemi"
+      content="Sağlık ve Rutin Takip Sistemi"
+    />
     <link rel="apple-touch-icon" href="/logo4.jpeg" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
@@ -30,8 +34,8 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="/manifest.json" />
-    <title>Sağlık Takip Sistemi</title>
+    <link rel="manifest" href="/public/manifest.json" />
+    <title>Sağlık ve Rutin Takip Sistemi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
