--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="tr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/logo4.jpeg" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="/public/logo4.jpeg" />
+    <link rel="manifest" href="/public/manifest.json" />
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
